hotfix: Fix compilation error due to usages of java 9 List.of